grammar.js
    source_file: ($) =>
      repeat(
        seq(
          choice($._top_level_declaration, $._statement),
          optional(terminator)
        )
      ),

    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $._c_directive,
        $.function_declaration,
        $.type_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.import_declaration,
        $.module_clause
      ),

    _expression: ($) =>
      choice(
        $._single_line_expression,
        $.type_initializer,
        $.array,
        $.fixed_array,
        $.unary_expression,
        $.binary_expression,
        $.in_expression,
        $.is_expression,
        $.selector_expression,
        $.index_expression,
        $.slice_expression,
        $.type_cast_expression,
        $.as_type_cast_expression,
        $.call_expression,
        $.special_call_expression,
        $.fn_literal,
        $.selector_expression,
        $._expression_with_blocks
      ),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(
          field("operator", choice(...unary_operators)),
          field("operand", choice($._expression))
        )
      ),

    call_expression: ($) =>
      prec.right(
        PREC.comparative,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.binded_identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          ),
          field("type_parameters", optional($.type_parameters)),
          field("arguments", $.argument_list),
          optional($.option_propagator)
        )
      ),

    comment: ($) =>
      token(
        choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))
      ),

    true: ($) => "true",
    type_initializer: ($) =>
      prec(
        PREC.composite_literal,
        seq(
          field(
            "type",
            choice(
              $.builtin_type,
              $.type_identifier,
              $.type_placeholder,
              $.generic_type,
              $._binded_type,
              $.qualified_type,
              $.pointer_type,
              $.array_type,
              $.fixed_array_type,
              $.map_type,
              $.channel_type
            )
          ),
          field("body", $.literal_value)
        )
      ),

    literal_value: ($) =>
      seq(
        "{",
        repeat(
          seq(
            choice($.keyed_element, alias($._element, $.element)),
            optional(choice(",", terminator))
          )
        ),
        "}"
      ),

    keyed_element: ($) =>
      seq(
        prec(
          PREC.resolve,
          field(
            "name",
            seq(
              choice($._field_identifier, $._string_literal),
              token.immediate(":")
            )
          )
        ),
        field("value", $._element)
      ),

    _element: ($) =>
      prec(
        PREC.resolve,
        choice(
          $._expression,
          $.unsafe_expression,
          $.if_expression,
          $.comptime_if_expression,
          $.match_expression,
          $.lock_expression,
          $.sql_expression
        )
      ),

    fixed_array_indicator: ($) => token(fixed_array_symbol),

    array_type: ($) =>
      prec(PREC.resolve, seq("[]", field("element", $._simple_type))),

    map_type: ($) =>
      seq("map[", field("key", $._simple_type), "]", field("value", $._type)),

    channel_type: ($) => seq("chan", field("value", $._simple_type)),

    int_literal: ($) => token(int_literal),

    _string_literal: ($) => choice($.interpreted_string_literal),

    interpreted_string_literal: ($) => quoted_string($, $.string_interpolation),

    identifier: ($) =>
      token(
        seq(
          choice(unicode_letter_lower, "_"),
          repeat(choice(letter, unicode_digit))
        )
      ),

    _old_identifier: ($) =>
      token(seq(letter, repeat(choice(letter, unicode_digit)))),

    _mutable_identifier: ($) => seq(mut_keyword, $.identifier),

    binded_identifier: ($) =>
      seq(
        field("language", $.language_spec),
        field("name", alias($._old_identifier, $.identifier))
      ),

    identifier_list: ($) =>
      prec(
        PREC.primary,
        comma_sep1(choice($.identifier, $._mutable_identifier))
      ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression))),

    parameter_list: ($) => seq("(", comma_sep($.parameter_declaration), ")"),

    argument_list: ($) => seq("(", comma_sep($._expression), ")"),

    _type: ($) => choice($._simple_type, $.option_type, $.multi_return_type),

    _simple_type: ($) =>
      choice(
        $.builtin_type,
        $.type_identifier,
        $.type_placeholder,
        $._binded_type,
        $.qualified_type,
        $.pointer_type,
        $.array_type,
        $.function_type
      ),

    type_parameters: ($) =>
      prec(
        PREC.resolve,
        seq(
          token.immediate("<"),
          comma_sep1($._simple_type),
          token.immediate(">")
        )
      ),

    builtin_type: ($) => choice(...builtin_type_keywords),

    _binded_type: ($) => alias($.binded_identifier, $.binded_type),

    generic_type: ($) =>
      seq(choice($.qualified_type, $.type_identifier), $.type_parameters),

    qualified_type: ($) =>
      seq(
        field("module", $._module_identifier),
        token.immediate("."),
        field("name", $.type_identifier)
      ),

    type_identifier: ($) =>
      token(seq(unicode_letter_upper, repeat1(choice(letter, unicode_digit)))),

    _module_identifier: ($) => alias($.identifier, $.module_identifier),

    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    _statement_list: ($) =>
      seq(
        $._statement,
        repeat(seq(optional(terminator), $._statement)),
        optional(terminator)
      ),

    _statement: ($) =>
      choice(
        $._simple_statement,
        $.assert_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.goto_statement,
        $.labeled_statement,
        $.empty_labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.comptime_for_statement,
        $.send_statement
      ),

    send_statement: ($) =>
      prec(
        PREC.unary,
        seq(
          field("channel", $._expression),
          "<-",
          field("value", $._expression)
        )
      ),

    short_var_declaration: ($) => assignment_statement_support($, ":="),

    block: ($) => seq("{", optional($._statement_list), "}"),

    function_declaration: ($) =>
      prec.right(
        seq(
          field("attributes", optional($.attribute_list)),
          optional(pub_keyword),
          fn_keyword,
          field("receiver", optional($.parameter_list)),
          field("langauge", optional($.language_spec)),
          field("name", choice($.identifier, $.overloadable_operator)),
          field("type_parameters", optional($.type_parameters)),
          field("parameters", $.parameter_list),
          field("result", optional($._type)),
          field("body", optional($.block))
        )
      ),

    language_spec: ($) =>
      seq(field("language", choice("C", "JS")), token.immediate(".")),

    const_declaration: ($) =>
      seq(
        optional(pub_keyword),
        const_keyword,
        choice(
          $.const_spec,
          seq("(", repeat1(seq($.const_spec, terminator)), ")")
        )
      ),

    const_spec: ($) =>
      seq(field("name", $.identifier), "=", field("value", $._expression)),

    return_statement: ($) =>
      prec.left(seq(return_keyword, optional(choice($._expression)))),

    type_declaration: ($) =>
      seq(
        optional(pub_keyword),
        type_keyword,
        field("name", $.type_identifier),
        "=",
        field("types", $.type_list)
      ),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", $._expression),
          token.immediate("."),
          field(
            "field",
            choice(
              $.identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          )
        )
      ),

    is_expression: ($) =>
      prec.left(
        PREC.comparative,
        seq(
          field("left", $._expression),
          choice(is_keyword, "!" + is_keyword),
          field("right", choice($.option_type, $._simple_type))
        )
      ),

    struct_declaration: ($) =>
      seq(
        field("attributes", optional($.attribute_list)),
        optional(pub_keyword),
        struct_keyword,
        field(
          "name",
          prec.dynamic(
            PREC.composite_literal,
            choice($.type_identifier, $._binded_type, $.generic_type)
          )
        ),
        $.struct_field_declaration_list
      ),

    struct_field_declaration_list: ($) =>
      seq(
        "{",
        repeat(
          seq(
            choice($.struct_field_scope, $.struct_field_declaration),
            optional(terminator)
          )
        ),
        "}"
      ),

    enum_declaration: ($) =>
      seq(
        optional($.attribute_list),
        optional(pub_keyword),
        enum_keyword,
        field("name", $.type_identifier),
        $.enum_member_declaration_list
      ),

    enum_member_declaration_list: ($) =>
      seq(
        "{",
        optional(seq(repeat(seq($.enum_member, optional(terminator))))),
        "}"
      ),

    enum_member: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("=", field("value", $.int_literal)))
      ),

    match_expression: ($) =>
      seq(
        match_keyword,
        field("condition", choice($._expression, $._mutable_identifier)),
        "{",
        repeat($.expression_case),
        $.default_case,
        "}"
      ),

    expression_case: ($) =>
      seq(field("value", $.expression_list), field("consequence", $.block)),

    default_case: ($) => seq("else", field("consequence", $.block)),
