test/corpus/c_fn_call.txt
=============
C Function Call
=============

C.abc(123)

---

(source_file
  (call_expression
    (binded_identifier
      (language_spec)
      (identifier))
    (argument_list
    	(int_literal))))
