test/corpus/const_declaration_pub.txt
===
Public const declaration
===

pub const (
  name = 'Foo'
  num = 100
)

---

(source_file
  (const_declaration
    (pub_keyword)
    (const_spec (identifier) (interpreted_string_literal))
    (const_spec (identifier) (int_literal))))
