test/corpus/enum_declaration_pub.txt
===
Public enum declaration
===

pub enum Color {
  blue
}

---

(source_file
  (enum_declaration
    (pub_keyword)
    (type_identifier)
    (enum_member_declaration_list
      (enum_member (identifier)))))
