test/corpus/if_expression.txt
===
If Expression
===

fn main() {
  if true {
  } else if !true {
  } else {
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (if_statement 
        (true) (block)
        (if_statement
          (unary_expression (true)) (block)
          (block))))))
