test/corpus/if_statement_is.txt
===
If statement is guard
===

fn main() {
  if var is string {
    // do something
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (is_expression (identifier) (builtin_type))
        (block (comment))))))
