test/corpus/map_initializer_empty.txt
===
Empty map Initializer
===

fn main() {
  test := map[string]int{}
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (expression_list (identifier))
        (map_initializer 
          (map_type (builtin_type) (builtin_type)))))))
