test/corpus/mutable_match_expression.txt
===
Match Expression with Mutable Identifier
===

fn main() {
  match mut a {
    'test', '123' {
      a := 'test pass'
    }
    'xd' {}
    else {}
  }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (match_expression
        (identifier)
        (expression_case
          (expression_list
            (interpreted_string_literal)
            (interpreted_string_literal))
          (block
            (short_var_declaration
              (identifier_list
                (identifier))
              (expression_list
                (interpreted_string_literal)))))
        (expression_case
          (expression_list
            (interpreted_string_literal))
          (block))
        (default_case (block))))))
