test/corpus/struct_declaration_generic.txt
===
Generic struct declaration
===

struct Hello<T, U> {}

---

(source_file
  (struct_declaration
    (generic_type 
      (type_identifier) 
      (type_parameters 
        (type_identifier) 
        (type_identifier)))
    (struct_field_declaration_list)))
