test/corpus/type_declaration_sum_type.txt
===
Sum type declaration
===

type Stmt = StructDecl | EnumDecl | ast.FnDecl

---

(source_file
  (type_declaration
    (type_spec
      (type_identifier)
      (type_identifier)
      (type_identifier)
      (qualified_type (module_identifier) (type_identifier)))))
