test/corpus/type_initializer_array.txt
===
Array Initializer
===

fn main() {
  test := []int{len: 10, cap: 10, init: 1}
}


---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (identifier_list (identifier))
        (expression_list
          (type_initializer
            (array_type (type_identifier))
            (literal_value
              (keyed_element (field_identifier) (int_literal))
              (keyed_element (field_identifier) (int_literal))
              (keyed_element (field_identifier) (int_literal)))))))))
